# letterboxd-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMMANDS.md  RELEASE_CHECKLIST.md  RELEASING.md  STEIPETE_COMPARISON.md
internal/: README.md
internal/cache/: cache.go
internal/cli/: analytics.go  auto_refresh.go  deliver.go  doctor.go  export.go  feedback.go  gaps.go  health.go  helpers.go  import.go  jobs.go  patterns.go  profile.go  recommendation_workflow.go  root.go  search.go  stale.go  stats.go  sync.go  tail.go  trends.go  workflow.go
internal/client/: client.go
internal/cliutil/: freshness.go
internal/mcp/: tools.go
internal/store/: store.go
letterboxd_cli/: __init__.py  auth.py  browser_cookies.py  cli.py  exports.py  feeds.py  filters.py  normalization.py  output.py  parsers.py  recommendations.py  storage.py  web.py
scripts/: gen-command-docs.py
tests/: test_cli.py
tests/fixtures/: letterboxd_rss.xml  live_watchlist.html
